--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -60,3 +60,5 @@
 @misc{8thwall_products, url={https://www.8thwall.com/products}, journal={8th Wall - Products}}
 
 @misc{wikitude, title={Wikitude}, url={https://www.wikitude.com/products/wikitude-sdk/}, journal={Wikitude}}
+
+@misc{ZapStudio, title={Introduction}, url={https://docs.zap.works/studio/getting-started/introduction/}, journal={Studio}}
