--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -3,6 +3,11 @@
 \section{Introducción}
 
 \section{Planificación temporal}
+\subsection{Sprint 1}
+\subsection{Sprint 2 (29/01/2020 - 5/02/2020)}
+\subsection{Sprint 3 (5/02/2020 - 12/02/2020)}
+\subsection{Sprint 4 (12/02/2020 - 26/02/2020)}
+\subsection{Sprint 5}
 
 \section{Estudio de viabilidad}
 
