Planificación temporal en anexos

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -1,12 +1,33 @@
 \apendice{Plan de Proyecto Software}
 
 \section{Introducción}
+ Para la organización del trabajo se ha utilizado Github con la extensión de ZenHub para facilitar el seguimiento de las issues gracias a las opciones que ofrece la extensión.
 
 \section{Planificación temporal}
-\subsection{Sprint 1}
+Inicialmente decimos centrarnos en el mirar diferentes herramientas AR, para poder compararlas y ver las ventajas y desventajas que tienen...
+También con la intención de una vez analizadas poder realizar algún ejemplo, en el que demostrar las cualidades de dicha herramienta y del uso de la realidad aumentada....
+
+
+\subsection{Sprint 0 ()}
+Durante la primera reunión, estuvimos hablando sobre de lo que va el proyecto y de que visión teníamos sobre él, y de hacia donde le podríamos dirigir.
+Las tareas que se hicieron fueron sobre la creación del repositorio y la instalación de latex para la documentación. También comencé ha investigar sobre las herramientas de realidad aumentada de forma general.
+
+\subsection{Sprint 1 ()}
+Durante este primer Sprint 1, hemos acordado ir mejorando y completando  la investigación respecto las herramientas de realidad aumentada que tenia seleccionadas.
+Para este sprint decidí centrarme en las herramientas Vuforia y Mergecube.
+También como uno de los objetivos del TFG es trabajar con Unity para la creación de ejemplos/proyectos, he incluido una pequeña introducción sobre Unity y los pasos necesarios para su instalación.
 \subsection{Sprint 2 (29/01/2020 - 5/02/2020)}
+Durante el segundo sprint me centre en documentar sobre las diferentes técnicas de realidad aumentada que se utilizan por la mayoría de herramientas.
+También en documentar las herramientas de ArCore y ArKit.
+
+También estuvimos hablando sobre posibles ideas para la elaboración de un ejemplo. Surgió la idea de realizar una especie de juego o aplicación <educativo> que pueda servir como inicio a la programación. Aunque esta idea nos dimos cuenta que depende de como la enfoquemos puede ser demasiado compleja y amplia como para hacer un ejemplo sencillo.
 \subsection{Sprint 3 (5/02/2020 - 12/02/2020)}
+
+Me centre en la documentación de las herramientas de Kudan y 8thwall.
+Debido que estuve enfermo gran parte de las semana no pude avanzar mas.....
 \subsection{Sprint 4 (12/02/2020 - 26/02/2020)}
+Durante este sript decidí centrarme en las herramientas de Wikitude, OpenCV, ZapWorks, realizar también correcciones y mejoras de la documentación que el tutor había señalado.
+También estuve profundizando en la idea del ejemplo... 
 \subsection{Sprint 5}
 
 \section{Estudio de viabilidad}
