Planificación temporal Sprint 6

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -2,37 +2,50 @@
 
 \section{Introducción}
  Para la organización del trabajo se ha utilizado Github con la extensión de ZenHub para facilitar el seguimiento de las issues gracias a las opciones que ofrece la extensión.
-
+En el siguiente enlace se encuentra el repositorio del trabajo :\url{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada}.
 \section{Planificación temporal}
-Inicialmente decimos centrarnos en el mirar diferentes herramientas AR, para poder compararlas y ver las ventajas y desventajas que tienen...
+Inicialmente decidimos centrarnos en el mirar diferentes herramientas AR, para poder compararlas y ver las ventajas y desventajas que tienen.
 También con la intención de una vez analizadas poder realizar algún ejemplo, en el que demostrar las cualidades de dicha herramienta y del uso de la realidad aumentada....
 
+A continuación se explicaran todos los sprints que se han ido desarrollando durante el proyecto.
 
-\subsection{Sprint 0 ()}
-Durante la primera reunión, estuvimos hablando sobre de lo que va el proyecto y de que visión teníamos sobre él, y de hacia donde le podríamos dirigir.
-Las tareas que se hicieron fueron sobre la creación del repositorio y la instalación de latex para la documentación. También comencé ha investigar sobre las herramientas de realidad aumentada de forma general.
+\subsection{Sprint 0 (-22/01/2020)}
+Durante la primera reunión, estuvimos hablando sobre el objetivo del proyecto, de que visión teníamos sobre él, y de hacia donde le podríamos dirigir.
+Las tareas que se hicieron fueron sobre la creación del repositorio y la instalación de \LaTeX{} para la documentación. También comencé a investigar sobre las herramientas de realidad aumentada de forma general.
 
-\subsection{Sprint 1 ()}
-Durante este primer Sprint 1, hemos acordado ir mejorando y completando  la investigación respecto las herramientas de realidad aumentada que tenia seleccionadas.
+\subsection{Sprint 1 (22/01/2020-29/01/2020)}
+Durante este sprint, hemos acordado ir mejorando y completando  la investigación respecto las herramientas de realidad aumentada que tenía seleccionadas.
 Para este sprint decidí centrarme en las herramientas Vuforia y Mergecube.
 También como uno de los objetivos del TFG es trabajar con Unity para la creación de ejemplos/proyectos, he incluido una pequeña introducción sobre Unity y los pasos necesarios para su instalación.
 \subsection{Sprint 2 (29/01/2020 - 5/02/2020)}
-Durante el segundo sprint me centre en documentar sobre las diferentes técnicas de realidad aumentada que se utilizan por la mayoría de herramientas.
+Durante el segundo sprint me centré en documentar sobre las diferentes técnicas de realidad aumentada que se utilizan por la mayoría de herramientas.
 También en documentar las herramientas de ArCore y ArKit.
 
-También estuvimos hablando sobre posibles ideas para la elaboración de un ejemplo. Surgió la idea de realizar una especie de juego o aplicación <<educativa>> que pueda servir como inicio a la programación. Aunque esta idea nos dimos cuenta que depende de como la enfoquemos puede ser demasiado compleja y amplia como para hacer un ejemplo sencillo.
+También estuvimos hablando sobre posibles ideas para la elaboración de un ejemplo. Surgió la idea de realizar una especie de juego o aplicación <<educativa>> que pueda servir como inicio a la programación. Aunque esta idea nos dimos cuenta que depende de cómo la enfoquemos puede ser demasiado compleja y amplia como para hacer un ejemplo sencillo.
 \subsection{Sprint 3 (5/02/2020 - 12/02/2020)}
 
-Me centre en la documentación de las herramientas de Kudan y 8thwall.
-Debido que estuve enfermo gran parte de las semana no pude avanzar mas.....
+Me centré en la documentación de las herramientas de Kudan y 8thwall.
+Debido que estuve enfermo gran parte de las semana no pude avanzar mas.
 \subsection{Sprint 4 (12/02/2020 - 26/02/2020)}
 Durante este sript decidí centrarme en las herramientas de Wikitude, OpenCV, ZapWorks, realizar también correcciones y mejoras de la documentación que el tutor había señalado.
 También estuve profundizando en la idea del ejemplo... 
 \subsection{Sprint 5 (26/02/2020 - 04/03/2020)}
-Se estuvo hablando respecto al ejemplo, para empezar ya con el. Sobre la idea de hacer un pequeño juego en el que hay un "laberinto" y que el usuario tuviera que resolver el camino moviéndose por comandos de una forma similar a una programación por blocking pero simplificado, todo esto aplicado con las herramientas de realidad aumentada. Dado que aun la idea parecía algo incompleta y complicada de ajustar a las herramientas de realidad aumentada, vamos a intentar primero un ejemplo mas sencillo, este seria una en la que poder ver las fases de crecimiento en una ''planta''. 
-Durante el sprint probare a poder usar la cámara de forma que sea como una regadera, así cuando este encima del Mercube donde estaría la planta, caiga agua. La otra forma pensada mas sencilla, seria simplemente añadir en pantalla un botón, que al presionarle se riegue la planta.
+Se estuvo hablando respecto al ejemplo, para empezar ya con el. Sobre la idea de hacer un pequeño juego en el que hay un <<laberinto>> y que el usuario tuviera que resolver el camino moviéndose por comandos de una forma similar a una programación por blocking pero simplificado, todo esto aplicado con las herramientas de realidad aumentada. 
 
-También ha buscar modelos 3D, que puedan servir para representar las fases del crecimiento y demás contenidos educativos.
+Dado que aún la idea parecía algo incompleta y complicada de ajustar a las herramientas de realidad aumentada, vamos a intentar primero un ejemplo mas sencillo, este seria una en la que poder ver las fases de crecimiento en una <<planta>>. 
+Durante el sprint probare a poder usar la cámara de forma que sea como una regadera, así cuando este encima del Mercube donde estaría la planta, caiga agua. La otra forma pensada mas sencilla, sería simplemente añadir en pantalla un botón, que al presionarle se riegue la planta.
+
+También a buscar modelos 3D, que puedan servir para representar las fases del crecimiento y demás contenidos educativos.
+
+\subsection{Sprint 6 (04/03/2020 -11/03/2020)}
+
+Durante la reunión de este sprint mostré los primeros pasos que había realizado del ejemplo a desarrollar en Unity para aplicar herramientas AR. También comente mis ideas sobre como continuar y los puntos que me quería centrar durante este sprint.
+
+Centrarme en poder detectar las partículas que simulan ser agua, cuando estas colisionan con un objeto determinado. Y que contando el numero de contactos poder determinar la progresión para poder pasar a otra etapa u nivel. También hacer uso del sensor giroscopio del móvil, para determinar con la inclinación del dispositivo la cantidad de partículas que caen.
+
+Cómo la idea del ejemplo sería seguir el crecimiento de una planta en realidad aumentada desde un punto educativo, pensamos en que aparte de poder echarle agua, también se podría cambiar entre diferentes opciones, cómo abonos etc, también se podrían considerar establecer normas para poner, la estación en la que se planta, etc. Por lo que habría que incluir una forma de cambiar entre esas diferentes opciones.
+
+Otro de los aspectos que he estado mirando, es mejorar el posicionamiento virtual del objeto 3D en el marcador. Ya que con la primera configuración que he probado, cuando se mueve la cámara( el móvil) el objeto se mueve de su posición demasiado.
 
 \section{Estudio de viabilidad}
 
