--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -33,9 +33,25 @@
 % Imagenes
 \usepackage{graphicx}
 \newcommand{\imagen}[2]{
-	\begin{figure}[!h]
+	\begin{figure}%[!h]
 		\centering
 		\includegraphics[width=0.9\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
+\newcommand{\imagenPeque}[2]{
+	\begin{figure}%[!h]
+		\centering
+		\includegraphics[width=0.4\textwidth]{#1}
+		\caption{#2}\label{fig:#1}
+	\end{figure}
+	\FloatBarrier
+}
+\newcommand{\imagenPequeDos}[2]{
+	\begin{figure}%[!h]
+		\centering
+		\includegraphics[width=0.7\textwidth]{#1}
 		\caption{#2}\label{fig:#1}
 	\end{figure}
 	\FloatBarrier
