Añadido Requisitos de usuario.
Se han añadido los requisitos de usuario en anexos.

--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -3,7 +3,15 @@
 \section{Introducción}
 
 \section{Requisitos de usuarios}
-
+ El ejemplo desarrollado se trata de una aplicación Android, por lo que el primer requisito necesario es disponer de un Dispositivo Android, con una versión Android 6.0 (Marshmallow) o superior. 
+ Ademas debera cumplir los siguientes requisitos:
+ \begin{itemize}
+ 	\item CPU Quad Core.
+ 	\item 1-2GB de memoria RAM.
+ 	\item Sensor de Giróscopio.
+ 	\item Se recomienda una cámara que permita grabar mínimo en 720p.  
+ \end{itemize}
+También es necesario disponer de un MergeCube, es valido tanto en papel como el original. 
 \section{Instalación}
 
 \section{Manual del usuario}
