Viabilidad económica CoSpaces

--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -2,6 +2,7 @@
 
 % Castellano
 \usepackage[spanish,es-tabla]{babel}
+\usepackage{eurosym}
 \selectlanguage{spanish}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
