--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -3,8 +3,9 @@
 \section{Introducción}
 
 \section{Requisitos de usuarios}
- El ejemplo desarrollado se trata de una aplicación Android, por lo que el primer requisito necesario es disponer de un Dispositivo Android, con una versión Android 6.0 (Marshmallow) o superior. 
- Ademas debera cumplir los siguientes requisitos:
+ El ejemplo desarrollado se trata de una aplicación Android, por lo que el primer requisito necesario es disponer de un Dispositivo Android, con una versión Android 6.0 (Marshmallow) o superior.
+  
+ Ademas deberá cumplir los siguientes requisitos\cite{vuforia_devices}:
  \begin{itemize}
  	\item CPU Quad Core.
  	\item 1-2GB de memoria RAM.
