--- a/Documentación/bibliografiaAnexos.bib
+++ b/Documentación/bibliografiaAnexos.bib
@@ -13,3 +13,5 @@
        url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
        note = "[Internet; descargado 30-septiembre-2015]"
 }
+
+@misc{vuforia_devices,title={Vuforia Supported Devices}, url={https://library.vuforia.com/articles/Solution/vuforia-fusion-supported-devices.html}, journal={Vuforia Fusion Supported Devices}}
