Planificación temporal Sprint 7

--- a/Documentación/tex/4_Tecnicas_y_herramientas.tex
+++ b/Documentación/tex/4_Tecnicas_y_herramientas.tex
@@ -15,5 +15,7 @@ Se trata de una plataforma donde se pueden guardar con un sistema de control de 
 \section{Herramientas de desarrollo}
 \subsection{Unity}
 Unity\footnote{\url{https://unity.com/es}}, es un motor gráfico de desarrollo de videojuegos creado por Unity technologies, disponible para Windows,Linux y Mac OS. En el, se pueden desarrollar aplicaciones para distintas plataformas como, Windows, MacOS,Linux, Andorid, iOS, videoconsolas, WebGL, tvOS y Facebook.
+\subsection{Vuforia}
+\subsection{CoSpace}
 
 
