Añadidos los objetivos generales

--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -1,11 +1,20 @@
 \apendice{Especificación de Requisitos}
 
 \section{Introducción}
-
+En el siguiente apartado se especificarán los requisitos y objetivos del ejemplo que se ha desarrollado.
 \section{Objetivos generales}
-
+ \begin{itemize}
+	\item El objetivo principal es realizar una aplicación móvil de realidad aumentada, desarrollándola con algunas de las herramientas de realidad aumenta vistas.
+	\item Realizar la aplicación, teniendo como principal marcador el MergeCube.
+	\item Poder ser una aplicación de ámbito educativo.
+	\item Se propone simular el crecimiento de una planta, pudiendo ver las diferentes etapas del desarrollo de la planta.
+	\item Que pueda usarse en el mayor número de dispositivos compatible posibles.  
+\end{itemize}
 \section{Catalogo de requisitos}
-
+\subsection{Requisitos Funcionales}
+ \begin{itemize}
+	\item . 
+\end{itemize}
 \section{Especificación de requisitos}
 
 
