Requisitos no funcionales

--- a/Documentación/tex/B_Requisitos.tex
+++ b/Documentación/tex/B_Requisitos.tex
@@ -19,16 +19,22 @@ En el siguiente apartado se especificarán los requisitos y objetivos del ejempl
 	\item \textbf{RF 1.2:} Ajustar tiempos de cada fase,  .
 	\item \textbf{RF 1.3:} Seleccionar posibles tipos de plantas.	
 	\end{itemize} 
-	\item \textbf{RF 2:} Botones para seleccionar las diferentes herramientas(regar, abonar, etc).
+	\item \textbf{RF 2:} Botones para seleccionar las diferentes herramientas (regar, abonar, etc ).
 	\item \textbf{RF 3:} Botón para volver al menú de selección.
 	\item \textbf{RF 4:} Una interfaz que indique el progreso de cada fase del juego.
 	\item \textbf{RF 5:} Uso del giroscopio del dispositivo, para simular tener gravedad correctamente orientada.
-	\item \textbf{RF 6:} Posibilidad de moverse alrededor del objeto representado por realidad aumentada.
+	\item \textbf{RF 6:} Posibilidad de mover el dispositivo, alrededor del objeto representado por realidad aumentada.
 	\item \textbf{RF 7:} Ofrecer información educativa implementada dentro del juego.
 	\item \textbf{RF 8:} Ofrecer una Ayuda de usuario o tutorial.
 	\item \textbf{RF 9:} Poder cambiar de idioma.
+	\item \textbf{RF 10:} Poder hacer capturas de pantalla.
 \end{itemize}
-
+\subsection{Requisitos no Funcionales}
+\begin{itemize}
+	\item \textbf{RNF 1:} La aplicación debe de resultar fácil de usar y intuitiva para el usuario.
+	\item \textbf{RNF 2:} Debe tener un rendimiento aceptable, para un uso cómodo.
+	\item \textbf{RNF 3:} Debe de ser responsiva, pudiéndose adaptar la interfaz, a la pantalla de cualquier dispositivo.
+\end{itemize}
 \section{Especificación de requisitos}
 
 
