Descripción de casos de uso

--- a/Documentación/anexos.tex
+++ b/Documentación/anexos.tex
@@ -200,6 +200,36 @@
   \end{center}
 }
 
+% Nuevo comando para tablas grandes con cabecera y filas alternas coloreadas en gris.
+\newcommand{\tablaCasosDeUso}[6]{%
+	\begin{center}
+		\tablefirsthead{
+			\toprule
+			#5
+			\otoprule
+		}
+		\tablehead{
+			\multicolumn{#3}{l}{\small\sl continúa desde la página anterior}\\
+			\toprule
+			#5
+			\otoprule
+		}
+		\tabletail{
+			\hline
+			\multicolumn{#3}{r}{\small\sl continúa en la página siguiente}\\
+		}
+		\tablelasttail{
+			\hline
+		}
+		\bottomcaption{#1}
+		\begin{xtabular}{#2}
+			#6
+			\bottomrule
+		\end{xtabular}
+		\label{tabla:#4}
+	\end{center}
+}
+
 %
 % Nuevo comando para tablas grandes con cabecera.
 \newcommand{\tablaSinColores}[6]{%
