Añadido diagrama de flujo

--- a/Documentación/tex/C_Diseno.tex
+++ b/Documentación/tex/C_Diseno.tex
@@ -5,7 +5,9 @@
 \section{Diseño de datos}
 
 \section{Diseño procedimental}
-
+En la figura  \ref{fig:Diagrama} se muestra un diagrama de flujo, en el que se puede observar el comportamiento básico de la aplicación. Para crear el diagrama se ha usado la herramienta online Draw.io\footnote{\url{https://app.diagrams.net/}}.
+\imagen{Diagrama}{Diagrama de flujo del funcionamiento básico de la aplicación.}
 \section{Diseño arquitectónico}
+\section{Diseño de interfaz}
 
-
+En las siguientes imágenes se pueden ver, el prototipo de interfaz pensado para la aplicación. 
