--- a/Documentación/tex/C_Diseno.tex
+++ b/Documentación/tex/C_Diseno.tex
@@ -11,3 +11,14 @@ En la figura  \ref{fig:Diagrama} se muestra un diagrama de flujo, en el que se p
 \section{Diseño de interfaz}
 
 En las siguientes imágenes se pueden ver, el prototipo de interfaz pensado para la aplicación. 
+
+En las figuras \ref{fig:Interfaz/page1}, \ref{fig:Interfaz/page2} y \ref{fig:Interfaz/page2_2} se muestra un prototipo de los menús de la aplicación. En la segunda, se puede escoger diferentes modos de juego, por el momento en esta aplicación unicamente se está desarrollando un modo de juego. 
+Otra posibilidad para los menús, sería integrarlos por realidad aumenta en el MergeCube, teniendo que girarle y jugar con él para navegar por el menú.
+
+En las figuras \ref{fig:Interfaz/page3} y \ref{fig:Interfaz/page4}, se muestra un prototipo de la interfaz del juego. Tendríamos botones para seleccionar las diferentes herramientas posibles en la parte inferior. Y en la parte superior una barra de progreso, para indicar el progreso de cada fase. Para regresar al menú principal se podría usar los botones del terminal o añadir uno a la interfaz también.
+\imagenPeque{Interfaz/page1}{Prototipo del menú principal de la aplicación.}
+
+\imagenPeque{Interfaz/page2}{Prototipo del menú de juegos de la aplicación.}
+\imagenPeque{Interfaz/page2_2}{Prototipo del menú de tipos de plantas disponibles.}
+\imagenPeque{Interfaz/page3}{Prototipo de la interfaz en modo AR.}
+\imagenPeque{Interfaz/page4}{Prototipo de la interfaz en modo AR.}
